--- a/app/common/partials/footer.html
+++ b/app/common/partials/footer.html
@@ -1,7 +1,7 @@
 <div class="container">
 	<p>Website designed and built at RIKEN, Japan.</p>
-  <p>Built using Project-χ <%= VERSION_CHI %></p>
-	<p>Project-χ code licensed under MIT</p>
+  <p>Built using <a href="https://github.com/Hypercubed/Project-Chi">Project-χ</a> <%= VERSION_CHI %></p>
+	<p>Code licensed under MIT</p>
 	<p>v<%= template.version %></p>
 		<a href="https://github.com/Hypercubed/venn-chi">Source</a>
 		// <a ng-href="#/about">About</a>
